# missgram

./: .envrc  .gitignore  CMakeLists.txt  README.md  default.nix
doc/: setup-en.md  setup-zh.md
include/: missgram.hpp
src/: db.cpp  main.cpp  md.cpp  tg-test.cpp  tg.cpp
